Add javadocs (#44)